# hospital-ehs

./: .env.example  .gitignore  Dockerfile  LICENSE  Procfile  README.md  docker-compose.yml  entrypoint.sh  package-lock.json  package.json  railway.json
apps/hospital_saas/: README.md  pyproject.toml  requirements.txt  setup.py
apps/hospital_saas/hospital_saas/: __init__.py  api.py  boot.py  hooks.py  modules.txt  notifications.py  permissions.py
apps/hospital_saas/hospital_saas/api/: __init__.py  billing.py  dashboard.py  inventory.py  lab.py
apps/hospital_saas/hospital_saas/config/: __init__.py  desktop.py
apps/hospital_saas/hospital_saas/events/: __init__.py  appointment.py  billing.py  ipd.py  lab.py  opd.py  patient.py  radiology.py
apps/hospital_saas/hospital_saas/hospital_saas/custom_fields/: healthcare_custom_fields.json
apps/hospital_saas/hospital_saas/hospital_saas/doctype/department/: department.json  department.py
apps/hospital_saas/hospital_saas/hospital_saas/doctype/hospital/: hospital.json  hospital.py
apps/hospital_saas/hospital_saas/public/css/: hospital_saas.css
apps/hospital_saas/hospital_saas/public/js/: hospital_saas.js
apps/hospital_saas/hospital_saas/setup/: __init__.py  install.py
apps/hospital_saas/hospital_saas/tasks/: __init__.py  daily.py  hourly.py  weekly.py
apps/hospital_saas/hospital_saas/utils/: __init__.py  jinja_methods.py
apps/hospital_saas/hospital_saas/www/: lab-queue.html  lab-queue.py  pharmacy-queue.html  pharmacy-queue.py  queue.html  queue.py  radiology-queue.html  radiology-queue.py
prisma/: seed.js  (+1 more)
(+51 files in other folders)
